--- a/src/main/resources/templates/gr/admin/home.html
+++ b/src/main/resources/templates/gr/admin/home.html
@@ -263,7 +263,7 @@
                         </a>
                       </div>
                       <div class="sellerpage">
-                        <a th:href="@{/seller/home.do}">
+                        <a th:href="@{/seller/login.do}">
                           <div class="image-wrapper">
                             <img th:src="@{/images/gr/seller1.jpg}">
                             <div class="overlay"></div>
