--- a/src/main/resources/templates/gr/admin/footer.html
+++ b/src/main/resources/templates/gr/admin/footer.html
@@ -31,7 +31,7 @@
                 border-top: 1px solid gray;
                 position: fixed;
                 bottom: 0;
-                
+                background-color: #D9D9D9;
             }
 
             .footer_container{
