--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -411,7 +411,7 @@
 				pwLabel.style.color = 'red';
 			} else { // 그외의 모든 상황
 				pwLabel.innerText = "암호";
-				pwLabel.style.color = 'black';
+				pwLabel.style.color = 'gray';
 			}
 		}
 
