--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -37,7 +37,7 @@
     <th:block th:replace="~{/se/customer/header :: headerHTML}"></th:block>
 
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
-    <div style="padding-bottom: 300px;">
+    <div style="padding-bottom: 300px; z-index: -10px;">
 
         <div class="super_container" style="margin-top: -100px;">
             <div class="container single_product_container">
