--- a/src/main/resources/templates/km/customer/kmAlert.html
+++ b/src/main/resources/templates/km/customer/kmAlert.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
    <script th:inline="javascript" type="text/javascript">
       alert([[${message}]]); // 알림을 표시
