--- a/src/main/resources/templates/se/customer/join.html
+++ b/src/main/resources/templates/se/customer/join.html
@@ -195,13 +195,13 @@
             <div class="container text-center">
                 <label class="position-absolute joinLabel" id="idcheck">아이디 중복확인</label>
                 <input class="joinInput" type="text" name="id" placeholder="아이디" onkeyup="IdCheck(this)" autofocus><br>
-                <input class="joinInput" type="password" name="pw" placeholder="암호" value="se"><br>
+                <input class="joinInput" type="password" name="pw" placeholder="암호"><br>
                 <label class="position-absolute joinLabel" id="pwcheck"></label>
-                <input class="joinInput" type="password" name="pw2" placeholder="암호확인" value="se" onkeyup="PwCheck(this)"><br>
-                <input class="joinInput" type="text" name="name" placeholder="이름" value="이름"><br>
-                <input class="joinInput" type="tel" name="phone" placeholder="연락처" value="01053535353"><br>
-                <input class="joinInput" type="email" name="email" placeholder="이메일" value="e@emial.com"><br>
-                <input class="joinInput" type="text" name="nickname" placeholder="닉네임" value="닉네임"><br>
+                <input class="joinInput" type="password" name="pw2" placeholder="암호확인" onkeyup="PwCheck(this)"><br>
+                <input class="joinInput" type="text" name="name" placeholder="이름"><br>
+                <input class="joinInput" type="tel" name="phone" placeholder="연락처"><br>
+                <input class="joinInput" type="email" name="email" placeholder="이메일"><br>
+                <input class="joinInput" type="text" name="nickname" placeholder="닉네임"><br>
                 <input class="joinRadio" type="radio" name="gender" value="F" checked="checked">&nbsp;여성 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <input class="joinRadio mb-5" type="radio" name="gender" value="M" >&nbsp;남성<br>
 
