--- a/src/main/resources/templates/se/customer/findpw.html
+++ b/src/main/resources/templates/se/customer/findpw.html
@@ -170,8 +170,8 @@
         
         <div class="container text-center">
             <form th:action="@{/customer/findpw.do}" method="post" id="findpwform">
-                <input class="findPwInput" type="text" name="email" placeholder="이메일" value="sobun5959@gmail.com"><br>
-                <input class="findPwInput" type="text" name="phone" placeholder="연락처" value="01053535353"><br>
+                <input class="findPwInput" type="text" name="email" placeholder="이메일"><br>
+                <input class="findPwInput" type="text" name="phone" placeholder="연락처"><br>
                 <button class="findPwInput findPwBtn" type="button" onclick="findpwAction()">비밀번호찾기</button>
             </form>
             <div class="d-flex justify-content-center">
