--- a/src/main/resources/templates/se/customer/header.html
+++ b/src/main/resources/templates/se/customer/header.html
@@ -15,6 +15,11 @@
         * {
             font-family: 'NanumSquare';
         }
+
+        .headerAll {
+            z-index: 10;
+        }
+
         .headerAll a {
             text-decoration: none;
             color: black;
