--- a/src/main/resources/templates/gr/admin/footer.html
+++ b/src/main/resources/templates/gr/admin/footer.html
@@ -75,29 +75,29 @@
                 </p>
             </div>
         </div>
-        <div class="button" style="margin-right: 20px;">
+        <!-- <div class="button" style="margin-right: 20px;">
             <button id="backToTopBtn" onclick="scrollToTop()">Top</button>
-        </div>
+        </div> -->
     </footer>
 </th:block>
 
     <script>
-        window.onscroll = function() {
-            scrollFunction();
-        };
+        // window.onscroll = function() {
+        //     scrollFunction();
+        // };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("backToTopBtn").style.display = "block";
-            } else {
-                document.getElementById("backToTopBtn").style.display = "none";
-            }
-        }
+        // function scrollFunction() {
+        //     if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        //         document.getElementById("backToTopBtn").style.display = "block";
+        //     } else {
+        //         document.getElementById("backToTopBtn").style.display = "none";
+        //     }
+        // }
 
-        function scrollToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
+        // function scrollToTop() {
+        //     document.body.scrollTop = 0;
+        //     document.documentElement.scrollTop = 0;
+        // }
     </script>
 
 
