--- a/src/main/resources/templates/ikh/seller/item/searchdetail.html
+++ b/src/main/resources/templates/ikh/seller/item/searchdetail.html
@@ -83,7 +83,7 @@
                                 <div class="card mb-4">
                                     <div class="card-header">
                                         <i class="fas fa-chart-area me-1"></i>
-                                        지역별 매출
+                                        지역별 판매
                                     </div>
                                     <div class="card-body">
                                         <canvas id="myBarChart2" width="100%" height="30"></canvas>
@@ -177,7 +177,7 @@
     </script>
     <script>
         // 새로운 데이터 추가
-        var newMonthly = "2023-06";
+        var newMonthly = "2023-07";
         var newAmount = 0;
 
         salesData.push({ monthly: newMonthly, amount: newAmount });
