--- a/src/main/resources/templates/km/customer/ordersuccess.html
+++ b/src/main/resources/templates/km/customer/ordersuccess.html
@@ -30,7 +30,7 @@
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div class="bodysection" style="padding-bottom: 300px;">
 
-        <div class="success d-flex justify-content-center align-items-center" style="width: 100%;">
+        <div class="success d-flex justify-content-center align-items-center mt-4" style="width: 100%;">
             <div class="row">
                 <div class="col-2">
                     <!-- <a href="https://www.flaticon.com/kr/free-icons/" title="진드기 아이콘"></a> -->
@@ -48,13 +48,13 @@
 
         <div class="d-flex justify-content-center align-items-center successcontent" style="width: 100%;">
             <div class="row">
-                <div class="col-6 title">주문일시&nbsp;</div>
+                <div class="col-6 title">주문일시</div>
                 <div class="col-6 content" th:text="${ordersuccess.orderdate}"></div>
-                <div class="col-6 title">물품명&nbsp;</div>
+                <div class="col-6 title">물품명</div>
                 <div class="col-6 content" th:text="${ordersuccess.itemname}"></div>
-                <div class="col-6 title">결제금액&nbsp;</div>
+                <div class="col-6 title">결제금액</div>
                 <div class="col-6 content" th:text="${ordersuccess.totalprice}"></div>
-                <div class="col-6 title">수령지점&nbsp;</div>
+                <div class="col-6 title">수령지점</div>
                 <div class="col-6 content" th:text="${ordersuccess.storagename}"></div>
             </div>
         </div>
