--- a/src/main/resources/templates/gr/customer/myorderlist.html
+++ b/src/main/resources/templates/gr/customer/myorderlist.html
@@ -338,6 +338,10 @@
             color: gray;
         }
 
+        table tbody tr td.order_number{
+            font-size: 14px;
+        }
+
         
 
         table tbody tr td.date{
