--- a/src/main/resources/templates/se/customer/login.html
+++ b/src/main/resources/templates/se/customer/login.html
@@ -221,6 +221,28 @@
                             email = response.kakao_account.email;
                             nickname = response.kakao_account.profile.nickname;
                             gender = response.kakao_account.gender;
+
+                            if(!email || !gender) {
+                                alert('이메일과 성별 정보 제공에 동의해주세요');
+
+                                // 카카오톡 로그아웃
+                                if (Kakao.Auth.getAccessToken()) {
+                                    
+                                    Kakao.API.request({
+                                        url: '/v1/user/unlink',
+                                        success: function (response) {
+                                            console.log(response)
+                                        },
+                                        fail: function (error) {
+                                            console.log(error)
+                                        },
+                                    });
+                                
+                                    Kakao.Auth.setAccessToken(null);
+                                }
+                                return false;
+                            }
+
                             if(gender == 'female'){
                                 gender = 'F';
                             }
