--- a/src/main/resources/templates/se/customer/login.html
+++ b/src/main/resources/templates/se/customer/login.html
@@ -269,7 +269,7 @@
                                 return false;
                             }
                             else if(data.ret === 3){ // 정상회원 => 홈으로
-                                location.href="http://127.0.0.1:5959/SOBUN/customer/home.do";
+                                location.href="/SOBUN/customer/home.do";
                             }
 
 
