--- a/src/main/resources/static/css/km/selectitem.css
+++ b/src/main/resources/static/css/km/selectitem.css
@@ -44,7 +44,6 @@ COLOR PALETTE
 }
 body
 {
-	/* font-family: 'Poppins', sans-serif; */
 	font-size: 14px;
 	line-height: 23px;
 	font-weight: 400;
@@ -66,7 +65,6 @@ ul
 }
 p
 {
-	/* font-family: 'Poppins', sans-serif; */
 	font-size: 14px;
 	line-height: 1.7;
 	font-weight: 500;
@@ -125,7 +123,6 @@ h5{font-size: 16px;}
 h6{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	/* font-family: 'Poppins', sans-serif; */
 	color: #282828;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -138,13 +135,13 @@ h1, h2, h3, h4, h5, h6
 	font-weight: 500;
 	color: #777777 !important;
 }
-:-moz-placeholder /* older Firefox*/
+:-moz-placeholder 
 {
 	font-size: 16px !important;
 	font-weight: 500;
 	color: #777777 !important;
 }
-::-moz-placeholder /* Firefox 19+ */
+::-moz-placeholder 
 {
 	font-size: 16px !important;
 	font-weight: 500;
@@ -579,9 +576,6 @@ section
 .scrolltable {
 	table-layout: fixed;
 	border-collapse: collapse;
-	/* border-left: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
-	border-right: 1px solid #ddd; */
 	border : 1px solid #ddd;
 	border-top: none;
 }
