--- a/src/main/resources/templates/jk/seller/mypage/updatepw.html
+++ b/src/main/resources/templates/jk/seller/mypage/updatepw.html
@@ -35,7 +35,7 @@
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
             <main style=" background-color: #ffffff;">
-                <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
+                <div class="container-fluid px-4 pb-5 mb-5"> <!-- 옆쪽에 딱 붙음. -->
                     <div class="container mt-5">
                         <h1 class="mb-4"><strong>비밀번호 변경하기</strong></h1>
                         <hr />
